--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "echarts": "^5.6.0",
     "next": "15.1.6",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "simple-datatables": "^9.2.2"
   }
